# kpi_distributed_cpp

./: .gitignore  LICENSE  png_rgb_converter.py
01_sysinfo/: CMakeLists.txt  assets.qrc  ui.cpp
02_gui/: CMakeLists.txt  myimage.h  png_rgb_converter.py  ui.cpp
03_threads_and_processes/: CMakeLists.txt  draft.cpp  experiment.cpp  ui_qt_way.cpp  ui_simple.cpp
04_networking/: client_auto.cpp  server.cpp
04_sockets/: CMakeLists.txt  client_chat.cpp
05_message_queues/: CMakeLists.txt  mq_wrapper.cpp  mq_wrapper.h
05_message_queues/clients/: CMakeLists.txt  mainWindow.cpp  mainWindow.h  runApp.cpp
05_message_queues/clients/client1/: CMakeLists.txt  main.cpp
05_message_queues/clients/client2/: CMakeLists.txt  main.cpp
05_message_queues/clients/client3/: CMakeLists.txt  client3Window.h  main.cpp
05_message_queues/server/: CMakeLists.txt  mainWindow.cpp  mainWindow.h
06_filemapping/: CMakeLists.txt  client1.cpp  client2.cpp  common.hpp  server.cpp
07_pipes/: CMakeLists.txt  client.h  common.h  main.cpp  server.h
